--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="es">
 
 <head>
+    <!--Metadatos esenciales para SEO y accesibilidad-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Proyecto de práctica para aprender desarrollo frontend">
+    <!--Enlace a la hoja de estilos CSS-->
     <link rel="stylesheet" href="/src/styles/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <!-- En tu <head> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Proyecto Práctica Frontend</title>
+
 </head>
 
 <body>
