feat: Content update, HTML structure and new design

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="description" content="Proyecto de práctica para aprender desarrollo frontend">
+	<meta name="description" content="Galería de recursos gratuitos para aprender desarrollo frontend">
 	<!--Enlace a la hoja de estilos CSS-->
 	<link rel="stylesheet" href="./src/styles/style.css">
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 	<!-- En tu <head> -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-	<title>Proyecto Práctica Frontend</title>
+	<title>Galería de Recursos Frontend</title>
 </head>
 
 <body>
 	<header>
 		<nav class="navbar">
 			<a href="/index.html" class="logo">
-				<img src="./src/assets/imagenes/logo sin fondo.png" alt="Logo principal">
+				<img src="./src/assets/imagenes/logo sin fondo.png" alt="Logo de Recursos Frontend">
 			</a>
 			<button class="menu-toggle" aria-label="Abrir menú de navegación">
 				<span></span>
@@ -28,7 +28,7 @@
 			</button>
 			<ul class="nav-menu" id="nav-menu">
 				<li><a href="/index.html">Inicio</a></li>
-				<li><a href="#features">Características</a></li>
+				<li><a href="#resources">Recursos</a></li>
 				<li><a href="#about">Acerca de</a></li>
 				<li><a href="#contact">Contacto</a></li>
 			</ul>
@@ -38,30 +38,34 @@
 	<main class="principal">
 		<section class="hero">
 			<div class="container">
-				<h1>Bienvenido a mi Proyecto</h1>
-				<p>Este es un proyecto de práctica para aprender HTML y CSS.</p>
-				<a href="#features" class="btn">Descubre más</a>
+				<h1>Recursos para Desarrolladores Frontend</h1>
+				<p>Explora una selección curada de recursos gratuitos para aprender HTML, CSS, JavaScript y más.</p>
+				<a href="#resources" class="btn">Descubre los recursos</a>
 			</div>
 		</section>
 
-		<section id="features" class="features">
+		<section id="resources" class="features">
 			<div class="container">
-				<h2>Características Principales</h2>
+				<h2>Recursos Destacados</h2>
 				<div class="features-grid">
 					<div class="feature-card">
-						<div class="feature-icon">📷</div>
-						<h3>Característica 1</h3>
-						<p>Descripción detallada de la característica 1. Explica qué hace y por qué es importante.</p>
+						<div class="feature-icon">📚</div>
+						<h3>Tutoriales de HTML y CSS</h3>
+						<p>Aprende los fundamentos del diseño web con tutoriales gratuitos de plataformas como freeCodeCamp y
+							W3Schools.</p>
+						<a href="https://www.freecodecamp.org" target="_blank" class="btn btn-small">Explorar</a>
 					</div>
 					<div class="feature-card">
-						<div class="feature-icon">🖼️</div>
-						<h3>Característica 2</h3>
-						<p>Descripción detallada de la característica 2. Incluye los beneficios que ofrece.</p>
+						<div class="feature-icon">⚙️</div>
+						<h3>Herramientas de Diseño</h3>
+						<p>Usa herramientas como Figma y Canva para crear prototipos y diseños visuales para tus proyectos web.</p>
+						<a href="https://www.figma.com" target="_blank" class="btn btn-small">Explorar</a>
 					</div>
 					<div class="feature-card">
-						<div class="feature-icon">✨</div>
-						<h3>Característica 3</h3>
-						<p>Descripción detallada de la característica 3. Destaca qué hace única esta función.</p>
+						<div class="feature-icon">🚀</div>
+						<h3>Frameworks Frontend</h3>
+						<p>Descubre frameworks como Tailwind CSS y Bootstrap para agilizar el desarrollo de interfaces modernas.</p>
+						<a href="https://tailwindcss.com" target="_blank" class="btn btn-small">Explorar</a>
 					</div>
 				</div>
 			</div>
@@ -69,16 +73,17 @@
 
 		<section id="about" class="about">
 			<div class="container">
-				<h2>Acerca de este proyecto</h2>
-				<p>Este es un proyecto de práctica personal para mejorar mis habilidades en desarrollo frontend. Estoy
-					aprendiendo HTML, CSS y pronto JavaScript.</p>
+				<h2>Acerca de este Proyecto</h2>
+				<p>Este proyecto es una galería de recursos gratuitos para desarrolladores frontend, creado como parte de mi
+					aprendizaje en desarrollo web. Mi objetivo es compartir herramientas y tutoriales útiles mientras practico
+					HTML, CSS y JavaScript.</p>
 			</div>
 		</section>
 
 		<section id="contact" class="contact">
 			<div class="container">
 				<h2>Contacto</h2>
-				<p>¿Tienes preguntas o sugerencias? No dudes en contactarme.</p>
+				<p>¿Conoces más recursos o quieres colaborar? ¡Escríbeme!</p>
 				<a href="mailto:tuemail@ejemplo.com" class="btn">Enviar email</a>
 			</div>
 		</section>
@@ -86,8 +91,8 @@
 
 	<footer>
 		<div class="container">
-			<p>Proyecto de práctica para desarrollo frontend - 2025</p>
-			<p>Curso Lexpin 2025</p>
+			<p>Galería de Recursos Frontend - 2025</p>
+			<p>Creado por [Tu Nombre] como proyecto de práctica</p>
 		</div>
 	</footer>
 
