fix: html correction

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div class="container">
 				<h2>Contacto</h2>
 				<p>¿Conoces más recursos o quieres colaborar? ¡Escríbeme!</p>
-				<a href="mailto:tuemail@ejemplo.com" class="btn">Enviar email</a>
+				<a href="mailto:kevinj.prez91@gmail.com" class="btn" target="_blank">Enviar email</a>
 			</div>
 		</section>
 	</main>
@@ -92,7 +92,7 @@
 	<footer>
 		<div class="container">
 			<p>Galería de Recursos Frontend - 2025</p>
-			<p>Creado por [Tu Nombre] como proyecto de práctica</p>
+			<p>Creado por Kevin Pérez como proyecto de práctica</p>
 		</div>
 	</footer>
 
